--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
     "name": "DeskController",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-contrib-alarm-clock": "1.0.5",
+        "node-red-contrib-buienradar": "0.3.1",
+        "node-red-contrib-time-range-switch": "0.6.1",
+        "node-red-dashboard": "2.9.8"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flows_raspberrypi.json",
